sumo/tests/traci/VariableRetrieval/Junction/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Wed May 20 16:31:15 2009


-> Command sent: <SimulationStep>:
  TargetTime=5.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <GetVariable>:
  domID=169 varID=255 objID=1/1
.. Answered with error to command (169), [description: Unsupported variable specified]

-> Command sent: <SimulationStep>:
  TargetTime=6.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
